--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <title>IMG CLASSIFIER</title>
   </head>
   <body>
-    <h1 class="text-center">Klasifikasi buah buahan</h1>
+    <h1 class="text-center">Klasifikasi Kucing dan Anjing</h1>
 
     <form class="p-3 text-center" action="/" , method="post" enctype="multipart/form-data">
       <input class="form-control" type="file" name="imagefile" />
